<?xml version="1.0" encoding="utf-8"?><!--
The layout for the settings screen.

Created by Tihomir Georgiev
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="edu.kit.pse.a1sicht.ui.shared.SettingsViewModel"/>
        <variable name="first_name"
                  type="String"/>
        <variable name="last_name"
                  type="String"/>
        <variable name="m_number"
                  type="Integer"/>
    </data>
    <RelativeLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/AppTheme">

        <!-- Header -->
        <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentTop="true"
                android:background="#00796b">

            <TextView
                    android:id="@+id/stg_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/settings"
                    android:textScaleX="1"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:textColor="#000"
                    android:textSize="30sp"/>

            <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:src="?attr/actionModeCloseDrawable"
                    android:background="#00796b"
                    android:scaleType="fitCenter"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/app_name"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/avatar_stock"/>
        </RelativeLayout>

        <!-- Content -->
        <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_below="@+id/header"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/name_edit_text"/>

        <TextView
                android:id="@+id/last_name_tv_settings"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_below="@+id/name_text_view"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:labelFor="@+id/last_name_edit_text"/>

        <TextView
                android:id="@+id/mn_text_view_settings"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/matriculation_number"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_below="@+id/last_name_tv_settings"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textAlignment="gravity"
                android:layout_alignEnd="@+id/last_name_tv_settings"
                android:labelFor="@+id/mn_et_settings"
                android:visibility="invisible"/>

        <EditText
                android:id="@+id/name_edit_text"
                android:text="@{first_name}"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_toEndOf="@+id/last_name_tv_settings"
                android:layout_below="@+id/header"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_alignBottom="@+id/name_text_view"
                android:background="#FFFFFF"
                android:inputType="text"/>

        <EditText
                android:id="@+id/last_name_edit_text"
                android:text="@{last_name}"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_toEndOf="@+id/last_name_tv_settings"
                android:layout_below="@+id/name_edit_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:layout_alignBottom="@+id/last_name_tv_settings"
                android:background="#FFFFFF"
                android:inputType="text"/>

        <EditText
                android:id="@+id/mn_et_settings"
                android:text="@{String.valueOf(m_number)}"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/mn_text_view_settings"
                android:layout_below="@+id/last_name_edit_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:inputType="number"
                android:visibility="invisible"
        />
        <TextView
                android:id="@+id/language_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:layout_below="@+id/save_btn"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:textColor="#000"/>
        <Button
                android:id="@+id/save_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mn_et_settings"
                android:layout_marginTop="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:text="@string/save"
                android:textSize="20sp"
                android:background="@drawable/button_shape"/>

        <ImageButton
                android:id="@+id/de_btn"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_below="@+id/language_txt"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/de"/>

        <ImageButton
                android:id="@+id/gb_btn"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_below="@+id/language_txt"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/gb"/>

        <Button
                android:id="@+id/sign_out_real_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignStart="@+id/save_btn"
                android:layout_alignEnd="@+id/save_btn"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="74dp"
                android:layout_marginEnd="30dp"
                android:text="@string/sign_out"
                android:textSize="20sp"
                android:background="@drawable/button_shape"
                android:layout_marginStart="0dp"/>

    </RelativeLayout>
</layout>