...
    <string name="employee">Employee</string>
    <string name="confirm">Confirm</string>
    <string name="home_header">Home</string>
    <string name="register_header">Register</string>
    <string name="sign_out">Sign out</string>
    <string name="change_language">Change language</string>
    <string name="save">Save</string>
    <string name="matriculation_number">Matriculation number:</string>
    <string name="usersButton">Users</string>
    <string name="reviewsButton">Reviews</string>
    <string name="requestsButton">Employee Requests</string>
    <string name="language">Language:</string>
    <string name="listUsersHeader">Users</string>
...
