...
                        android:layout_height="40dp"
                        style="@style/CustomTextView"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_alignParentTop="true"/>

                <EditText android:id="@+id/nameET"
                          android:text="@{vm.reviewName}"
                          android:layout_width="300dp"
                          android:layout_height="40dp"
                          style="@style/CustomEditText"
                          android:layout_alignParentEnd="true"
                          android:layout_alignParentTop="true"
...
